--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ executing==1.2.0
 fastjsonschema==2.16.2
 fonttools==4.38.0
 idna==3.4
+imageio==2.24.0
 importlib-metadata==5.2.0
 importlib-resources==5.10.2
 ipykernel==6.19.4
@@ -48,6 +49,7 @@ nbclient==0.7.2
 nbconvert==7.2.7
 nbformat==5.7.1
 nest-asyncio==1.5.6
+networkx==3.0
 notebook==6.5.2
 notebook-shim==0.2.2
 numpy==1.24.1
@@ -70,18 +72,22 @@ pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.4
+PyWavelets==1.4.1
 pywin32==305
 pywinpty==2.0.9
 PyYAML==6.0
 pyzmq==24.0.1
 qtconsole==5.4.0
 QtPy==2.3.0
+scikit-image==0.19.3
+scipy==1.10.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
 terminado==0.17.1
+tifffile==2022.10.10
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.2
